Updates the docker-compose configuration to change the biko-frontend service's network from 'npm_network' to 'proxy'.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: biko-frontend
     restart: always
     networks:
-      - npm_network
+      - proxy   
     expose:
       - "3000"
 
