Updates the Docker configuration for the frontend service, adding environment variables and build arguments. Modifies the docker-compose.yml file to include the NEXT_PUBLIC_API_URL variable and adjusts the Dockerfile to set the corresponding environment variable. Improves the deployment flow in the GitHub Actions workflow to ensure correct environment variable passing during image build.

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -36,5 +36,6 @@ jobs:
 
             echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" > .env
 
-            docker compose up -d --build
+            docker compose build --build-arg NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
+            docker compose up -d
           EOF
