--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
 version: '3.8'
 
 services:
-  biko-frontend:
-    build: .
+  frontend:
+    build:
+      context: .
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     container_name: biko-frontend
     restart: always
     networks:
-      - proxy   
+      - proxy
     expose:
       - "3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
 networks:
   proxy:
