--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
+    "html-react-parser": "^5.2.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -55,6 +56,10 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
+    "card-validator": "^8.1.1",
+    "react-credit-cards": "^0.8.3",
+    "react-icons": "^5.5.0",
+    "yup": "^0.32.11",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "socket.io-client": "^4.8.1",
