--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
+    "card-validator": "^8.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -53,13 +54,11 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
+    "react-credit-cards-2": "^1.0.3",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
-    "card-validator": "^8.1.1",
-    "react-credit-cards": "^0.8.3",
     "react-icons": "^5.5.0",
-    "yup": "^0.32.11",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "socket.io-client": "^4.8.1",
@@ -67,6 +66,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "yup": "^0.32.11",
     "zod": "3.25.67"
   },
   "devDependencies": {
