--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "payment-token-efi": "^3.2.1",
     "react": "^19",
     "react-credit-cards-2": "^1.0.3",
     "react-day-picker": "9.8.0",
