--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "^5.85.6",
+    "@types/react-image-crop": "^9.0.2",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
@@ -60,6 +61,7 @@
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "socket.io-client": "^4.8.1",
