--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
+# docker-compose.yml
 services:
   biko-frontend:
     build:
       context: .
-      target: runner  # Usar apenas a etapa final
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     container_name: biko-frontend
@@ -10,23 +10,9 @@ services:
     networks:
       - proxy
     ports:
-      - "3000:3000"
+      - "3000:3000" 
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      NODE_ENV: production
-    # Limitar recursos para evitar overconsume
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
-    # Health check
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 networks:
   proxy:
