--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "3000:3000" 
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+      NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID: ${NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID}
 
 networks:
   proxy:
