--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           docker build \
             --build-arg NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }} \
-            -t ghcr.io/${{ github.repository_owner }}/biko-frontend:latest .
-          docker push ghcr.io/${{ github.repository_owner }}/biko-frontend:latest
+            -t ghcr.io/davidclp/biko-frontend:latest .
+          docker push ghcr.io/davidclp/biko-frontend:latest
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.0
@@ -31,5 +31,5 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /root/biko-frontend
-            docker pull ghcr.io/${{ github.repository_owner }}/biko-frontend:latest
+            docker pull ghcr.io/davidclp/biko-frontend:latest
             docker compose up -d
