--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -5,45 +5,44 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  packages: write
-  
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login no GitHub Container Registry
-        uses: docker/login-action@v3
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build e push da imagem
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/davidclp/biko-frontend:latest
-          build-args: |
-            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          ssh-private-key: ${{ secrets.SSH_KEY }}
 
       - name: Deploy to VPS
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            docker pull ghcr.io/davidclp/biko-frontend:latest
-            docker compose up -d
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            set -e
+
+            # Clona ou atualiza o repositório
+            if [ ! -d "/home/david/biko-frontend/.git" ]; then
+              rm -rf /home/david/biko-frontend
+              git clone https://github.com/${{ github.repository }} /home/david/biko-frontend
+            else
+              cd /home/david/biko-frontend
+              git fetch origin main
+              git reset --hard origin/main
+            fi
+
+            cd /home/david/biko-frontend
+
+            # Cria o .env
+            echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" > .env
+            echo "NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID=${{ secrets.NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID }}" >> .env
+
+            # Para containers antigos do projeto (evita conflito de nomes)
+            docker compose down --remove-orphans
+
+            # Build e sobe o container
+            docker compose build --build-arg NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
+            docker compose up -d --force-recreate
+          EOF
