Adiciona limites de recursos para o serviço biko-frontend no docker-compose, especificando restrições de CPU e memória para otimizar o desempenho durante o deploy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-# docker-compose.yml
 services:
   biko-frontend:
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 2G
     build:
       context: .
       args:
