--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy to VPS
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -o ServerAliveInterval=60 -o ServerAliveCountMax=30 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
             set -e
 
             # Clona ou atualiza o repositório
@@ -38,6 +38,7 @@ jobs:
             # Cria o .env
             echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" > .env
             echo "NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID=${{ secrets.NEXT_PUBLIC_GERENCIANET_ACCOUNT_ID }}" >> .env
+            echo "NODE_ENV=production" >> .env
 
             # Para containers antigos do projeto (evita conflito de nomes)
             docker compose down --remove-orphans
